--- a/package.json
+++ b/package.json
@@ -2,19 +2,21 @@
   "name": "mpa_express",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "entry_point/local_server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "dev": "nodemon ./local-server.js"
+    "dev": "nodemon"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "aws-serverless-express": "^3.3.6",
     "compression": "^1.7.4",
     "express": "^4.17.1",
     "morgan": "^1.9.1",
     "nodemon": "^1.19.1",
-    "serve-static": "^1.14.1"
+    "serve-static": "^1.14.1",
+    "serverless": "^1.45.1"
   }
 }
